Mapprio/main/default/objects/MapprioAnswerCloudResponsesForAccount__c/MapprioAnswerCloudResponsesForAccount__c.object-meta.xml
<CustomObject>
    <label>AnswerCloud Responses For Account</label>
    <nameField>
        <label>Mapprio AnswerCloud Responses For Accoun</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AnswerCloud Responses For Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>