Mapprio/main/default/objects/MapprioAnswerCloudResponsesForAccount__c/fields/QuestionScale__c.field-meta.xml
<CustomField>
    <fullName>QuestionScale__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scale</label>
    <referenceTo>MapprioQuestion__c</referenceTo>
    <relationshipLabel>Mapprio AnswerCloud Responses For Accounts (Scale)</relationshipLabel>
    <relationshipName>MapprioAnswerCloudResponsesForAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>