Mapprio/main/default/objects/MapprioAnswerCloudResponsesForAccount__c/fields/QuestionSource__c.field-meta.xml
<CustomField>
    <fullName>QuestionSource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mapprio AnswerCloud Source Question</label>
    <referenceTo>MapprioQuestion__c</referenceTo>
    <relationshipLabel>Mapprio AnswerCloud Responses For Accounts</relationshipLabel>
    <relationshipName>MappriAnswerCloudResponsesForAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>