Mapprio/main/default/objects/MapprioAnswerCloudResponsesForAccount__c/fields/ResponseText__c.field-meta.xml
<CustomField>
    <fullName>ResponseText__c</fullName>
    <description>Response text if the survey taker entered their own response into an AnswerCloud.</description>
    <label>Nonprescribed Response Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>